<resources>
    <string name="app_name">Son_Final</string>
    <string name="search_button_text">Search</string>
    <string name="search_user_hint">Search user</string>
    <string name="min_repos">min. # repos</string>
    <string name="followers">followers</string>
    <string name="page_size">page size</string>
    <string name="min_followers">min. # followers</string>
    <string name="repos">repos</string>

    <string name="menu_about">About</string>

    <string name="user_score">Score: %1$s</string>
    <string name="user_login">Login: %1$s</string>
    <string name="user_id">ID: %1$s</string>
    <string name="image_description">Avatar</string>

    <string name="message_title">Network Error</string>
    <string name="message_text">No internet connection available.</string>
    <string name="quit">Quit</string>
<!--Details page values-->
    <string name="placeholder_url">url</string>
    <string name="user_name">Name: %1$s</string>
    <string name="user_location">Location: %1$s</string>
    <string name="user_company">Company: %1$s</string>
    <string name="user_followers">Followers: %1$s</string>
    <string name="user_public_gist">Public Gists: %1$s</string>
    <string name="user_public_repos">Public Repos: %1$s</string>
    <string name="user_last_update">Last Updated: %1$s</string>
    <string name="user_date_created">Account Created: %1$s</string>

    <!--    Key values do not translate-->
    <string name="repos_key">REPOS_KEY</string>
    <string name="followers_key">FOLLOWERS_KEY</string>
    <string name="page_size_key">PAGE_SIZE_KEY</string>
    <string name="user_data_key">USER_DATA</string>
    <string name="url_key">URL_KEY</string>
    <string name="details_title_key">ACTIONBAR_TITLE</string>
    <string name="details_url_key">DETAILS_URL</string>
    <string name="details_html_url_key">DETAILS_HTML_URL</string>
    <string name="details_location_key">DETAILS_LOCATION</string>
    <string name="details_company_key">DETAILS_COMPANY</string>
    <string name="details_follower_key">DETAILS_FOLLOWER</string>
    <string name="details_gist_key">DETAILS_GIST</string>
    <string name="details_repo_key">DETAILS_REPO</string>
    <string name="details_last_update_key">DETAILS_LAST_UPDATE</string>
    <string name="details_date_created_key">DETAILS_DATE_CREATED</string>


    <!--    About page strings-->
    <string name="about_image_description">Son Tran Picture</string>
    <string name="about_app_name_version">GitHub Search v1.0.0</string>
    <string name="about_dev_name">Created by Son Tran</string>
    <string name="about_company_name">MADD 2022</string>
    <string name="about_dev_email">tran0460@algonquinlive.com</string>
    <string name="about_dev_web">sonnhattran.com</string>

</resources>